<resources>
    <string name="app_name">Projek Akhir Applikasi Mobile</string>
    <string name="smp_bustanul_makmur">SMP BUSTANUL MAKMUR</string>
    <string name="nama_siswa">Nama Siswa</string>
    <string name="nilai_tugas">Nilai Tugas</string>
    <string name="nilai_kehadiran">Nilai Kehadiran</string>
    <string name="nilai_uts">Nilai UTS</string>
    <string name="nilai_uas">Nilai UAS</string>
    <string name="h_a_s_i_l">H A S I L</string>
    <string name="nilai_akhir">Nilai Akhir</string>
    <string name="nilai_huruf">Nilai Huruf</string>
</resources>